# elevatormodel

./: README.md
model/: elevator.ord  elevator.smv  elevator.smv.php  elevator_heuristic.ord  elevator_simple.smv  elevator_simple.smv.php  elevator_simple_smart.smv  elevator_simple_smart.smv.php
paper/: main.tex
test/: CMakeLists.txt
test/src/: main.cpp  tester.hpp
